# ads_campaigns

./: .copier-answers.yml  .gitignore  .test.sh  CHANGELOG.md  README.md  devenv.nix  pyproject.toml  pytest.ini
.github/workflows/: test.yml
src/ads_campaigns/: README.md  __init__.py  campaign.db  settings.py  types.py  utils.py  views.py
tests/: __init__.py  test_functional.py  test_units.py
