
[project]
name = "ads_campaigns"
version = "1.0.0"
description = ""
authors = [
    {name = "Hamed Akhavan", email = "hakh.27@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
path = "src/ads_campaigns/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "Commitizen>=3.28.0",
    "mypy>=1.11.0",
    "pdbpp>=0.10.3",
    "pytest-coverage>=0.0",
    "pytest-dependency>=0.6.0",
    "pytest>=8.3.1",
]



[tool.commitizen]
version = "1.0.0"
update_changelog_on_bump = true
version_provider = "scm"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "pyproject.toml:version",
    "src/ads_campaigns/__init__.py"
]

[tool.ruff]
line-length = 88  # match Black default line length
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "UP", # pyupgrade
  "D",  # pydocstyle
  "I",  # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
branch = true
relative_files = true
source = [
    "src/ads_campaigns",
]

[tool.coverage.report]
skip_empty = true
